--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "koyomi"
 version = "0.2.0"
+edition = "2018"
 authors = ["Taro Yamashita <taro.ymst@gmail.com>"]
 description = "Japanese calendar written in Rust"
 repository = "https://github.com/panther-king/koyomi"
@@ -10,4 +11,4 @@ keywords = ["Japanese", "calendar"]
 exclude = [".travis.yml"]
 
 [dependencies]
-chrono = "0.4.1"
+chrono = "0.4"
